@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data and the Presentation of
         Analysis Results
-Version: 0.99.3
-Date: 2016-01-16
+Version: 0.99.3.2
+Date: 2016-01-24
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: One of the aims of this package is to make life easier for
@@ -26,6 +26,6 @@ URL:
         http://www.elff.eu/software/memisc/,http://github.com/melff/memisc/
 BugReports: http://github.com/melff/memisc/issues
 NeedsCompilation: yes
-Packaged: 2016-01-17 15:42:05 UTC; elff
+Packaged: 2016-01-24 16:52:24 UTC; elff
 Repository: CRAN
-Date/Publication: 2016-01-18 00:01:55
+Date/Publication: 2016-01-25 08:49:30
