@@ -1,4 +1,4 @@
-f0988d0c64107e58075ea1b3acb8fc2c *DESCRIPTION
+04165868f72a4971f6cdd13824d68729 *DESCRIPTION
 18d2a4815cab9567dbd230f2364f52ca *NAMESPACE
 b9e4dd80f2e0231fa0f3c19a6b063083 *R/AllClasses.R
 1e39dc0f5a08e4a4c04076305ae204e6 *R/AllGenerics.R
@@ -14,7 +14,7 @@ c10f075275f66a050b641db32dae8852 *R/Table.R
 6416862fe7fda12d7c82db97296c0ca5 *R/annotation.R
 bef050693f66d825c3d6839dbbcfcbaa *R/applyTemplate.R
 fa9222409deb0e039314cd5d413b1460 *R/cases.R
-04b8c4e7e648b32685c5e88b4ea2501a *R/codebook-format-html.R
+4207c93a0cb0e54ac90523533cfafd56 *R/codebook-format-html.R
 c118d6d5a16400b08099912e0446a52d *R/codebook-methods.R
 f273144714eab604e60a2947af6efe21 *R/collect.R
 e1c96c86ee9161293bc5f8a5695f3ce1 *R/compress-storage-modes.R
@@ -80,20 +80,20 @@ e00117f10553e5f14ac5efc81465bcc7 *R/yy-mtable-ext-JasonWMorgan.R
 b180d75380b365c80a346ffdbf5927b4 *R/yz-getSummary-mer.R
 a7385bc1239a6e5424c898ce3375d518 *R/yz-getSummary-merMod.R
 ba14c4a6b920a639d800355585ad66bc *R/zzz.R
-c4e4f3a6807f255f9404288ef50cbb2d *build/vignette.rds
-74cab78ca837027778e13b61d9189443 *inst/ChangeLog
-3d69657ae0f731da5e07ea360d6a89c4 *inst/NEWS.Rd
-267b45e397edc61c13205381e52d014d *inst/NEWS.html
+2c5fcbc84545cc765f7d39d2fb41064a *build/vignette.rds
+4a21b57d3ab345318aa2eb0d9b6ce1bf *inst/ChangeLog
+109bfee096fe69b55f9114975783e3f4 *inst/NEWS.Rd
+c2edff28f01026697e7e40da48f020c4 *inst/NEWS.html
 41637fb01a9545c5a26248e03217e449 *inst/anes/NES1948.ZIP
 0a2be7d09b3f12fc2833744f2f6ab3df *inst/doc/anes48.R
 9f072d7bd6e15b7fb475d3438820ff5d *inst/doc/anes48.Rmd
-acd365f6359aaf0ba698344891f59a86 *inst/doc/anes48.html
+e8b47f6cbf77c64f130fba63a945ac5c *inst/doc/anes48.html
 c73163804df1a5e9d63247e6d6547514 *inst/doc/ftable-matrix.R
-a1c65966037f061583cd587c2eeb395f *inst/doc/ftable-matrix.Rmd
+f648685b3777d2d576033586743f0dc0 *inst/doc/ftable-matrix.Rmd
 8c93dc5b3016f235c349cfded4e2d47b *inst/doc/ftable-matrix.html
 af480cd7fbc2c37a3b81ba6fa0b8514b *inst/doc/items.R
-f22775fb5bb9e91026fe573490550773 *inst/doc/items.Rmd
-d183c4c063772bb81c6ee2411a1233f7 *inst/doc/items.html
+fe65b486496a285b2be2bc978006db06 *inst/doc/items.Rmd
+1d844ce875f0bca37ab24e9f576da7be *inst/doc/items.html
 fd3e41a8a05d3624345a4b3a383b2cee *inst/doc/mtable-html.R
 91599bdfac989c398328d364f68b330a *inst/doc/mtable-html.Rmd
 61611832a86ce3805e6bbd0f50b3fec5 *inst/doc/mtable-html.html
@@ -165,6 +165,6 @@ fa4291fe47547022e32e146405aba64a *src/readfixed.c
 03da5a3346e76f2ba5d692c370eb60a9 *src/rofile.h
 8acf5f2547d2fa84eec70a1a1ac10168 *src/update_data_frame.c
 9f072d7bd6e15b7fb475d3438820ff5d *vignettes/anes48.Rmd
-a1c65966037f061583cd587c2eeb395f *vignettes/ftable-matrix.Rmd
-f22775fb5bb9e91026fe573490550773 *vignettes/items.Rmd
+f648685b3777d2d576033586743f0dc0 *vignettes/ftable-matrix.Rmd
+fe65b486496a285b2be2bc978006db06 *vignettes/items.Rmd
 91599bdfac989c398328d364f68b330a *vignettes/mtable-html.Rmd
