@@ -61,6 +61,18 @@ vignettes.
 
 
 
+<h4>DEFUNCT</h4>
+
+
+<ul>
+<li><p> The function <code>UnZip</code> has been removed from the package. <code>unzip</code> in conjunction with
+<code>system.file</code> does the same job, as can be seen in the example for <code>spss.portable.file</code>.
+</p>
+</li></ul>
+
+
+
+
 <h3>Version 0.98</h3>
 
 
@@ -260,5 +272,5 @@ as modifying the global namespace.
 
 
 
-<hr /><div style="text-align: center;">[Package <em>memisc</em> version 0.99.2 ]</div>
+<hr /><div style="text-align: center;">[Package <em>memisc</em> version 0.99.3 ]</div>
 </body></html>
