@@ -100,7 +100,7 @@ nes1948.por &lt;- unzip(system.file(&quot;anes/NES1948.ZIP&quot;,package=&quot;m
 <pre class="r"><code>nes1948 &lt;- spss.portable.file(nes1948.por)
 print(nes1948)</code></pre>
 <pre><code>
-SPSS portable file '/tmp/RtmpCiGU5i/file237e380a3f85/NES1948.POR' 
+SPSS portable file '/tmp/RtmpHoNMSE/filee992c7463bd/NES1948.POR' 
     with 67 variables and 662 observations</code></pre>
 <p>At this stage, the data are not loaded into the memory yet. But we can see which variables exist inside the data set:</p>
 <pre class="r"><code>names(nes1948)</code></pre>
@@ -672,12 +672,15 @@ RELIGIOUS PREFERENCE
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="vversion">
 <code class="cbe-name">vversion</code> — <span class="cbe-description">‘NES VERSION NUMBER’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -696,8 +699,8 @@ interval
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td style="text-align: right; padding-left: 0.3em; padding-right: 0.3em;">
@@ -780,17 +783,21 @@ NaN
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="vdsetno">
 <code class="cbe-name">vdsetno</code> — <span class="cbe-description">‘NES DATASET NUMBER’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -809,8 +816,8 @@ nominal
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -854,17 +861,21 @@ Percent
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="v480001">
 <code class="cbe-name">v480001</code> — <span class="cbe-description">‘ICPSR ARCHIVE NUMBER’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -883,8 +894,8 @@ interval
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td style="text-align: right; padding-left: 0.3em; padding-right: 0.3em;">
@@ -967,17 +978,21 @@ NaN
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="v480002">
 <code class="cbe-name">v480002</code> — <span class="cbe-description">‘INTERVIEW NUMBER’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -996,8 +1011,8 @@ interval
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td style="text-align: right; padding-left: 0.3em; padding-right: 0.3em;">
@@ -1084,17 +1099,21 @@ Kurtosis:
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="v480003">
 <code class="cbe-name">v480003</code> — <span class="cbe-description">‘POP CLASSIFICATION’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1113,8 +1132,8 @@ nominal
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1221,6 +1240,7 @@ Percent
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
@@ -1283,12 +1303,15 @@ Percent
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="vote">
 <code class="cbe-name">vote</code> — <span class="cbe-description">‘DID R VOTE/FOR WHOM’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1315,8 +1338,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1545,17 +1568,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="occupation.hh">
 <code class="cbe-name">occupation.hh</code> — <span class="cbe-description">‘OCCUPATION OF HEAD’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1582,8 +1609,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1967,17 +1994,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="unionized.hh">
 <code class="cbe-name">unionized.hh</code> — <span class="cbe-description">‘HEAD BELONG TO LBR UN’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2004,8 +2035,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2139,17 +2170,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="gender">
 <code class="cbe-name">gender</code> — <span class="cbe-description">‘SEX OF RESPONDENT’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2176,8 +2211,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2282,17 +2317,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="race">
 <code class="cbe-name">race</code> — <span class="cbe-description">‘RACE OF RESPONDENT’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2319,8 +2358,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2456,17 +2495,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="age">
 <code class="cbe-name">age</code> — <span class="cbe-description">‘AGE OF RESPONDENT’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2493,8 +2536,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2723,17 +2766,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="education">
 <code class="cbe-name">education</code> — <span class="cbe-description">‘EDUCATION OF RESPONDENT’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2760,8 +2807,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2897,17 +2944,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="total.income">
 <code class="cbe-name">total.income</code> — <span class="cbe-description">‘TOTAL 1948 INCOME’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2934,8 +2985,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -3195,17 +3246,21 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="religious.pref">
 <code class="cbe-name">religious.pref</code> — <span class="cbe-description">‘RELIGIOUS PREFERENCE’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -3232,8 +3287,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -3431,6 +3486,7 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
