@@ -381,6 +381,8 @@ codebook(voteint2)</code></pre>
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="voteint">
 <code class="cbe-name">voteint</code> — <span class="cbe-description">‘Vote intention’</span>
 </p>
@@ -390,6 +392,7 @@ codebook(voteint2)</code></pre>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -416,8 +419,8 @@ Valid range:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -673,6 +676,7 @@ M
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
@@ -941,6 +945,8 @@ Data set with 129 observations and 3 variables
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="vote">
 <code class="cbe-name">vote</code> — <span class="cbe-description">‘Vote intention’</span>
 </p>
@@ -950,6 +956,7 @@ Data set with 129 observations and 3 variables
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -976,8 +983,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1231,8 +1238,8 @@ M
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <dl class="cbe-annotations">
 <dt>
 Remark:
@@ -1241,17 +1248,21 @@ Remark:
 This is not a real survey item, of course …
 </dd>
 </dl>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="region">
 <code class="cbe-name">region</code> — <span class="cbe-description">‘Region of residence’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1278,8 +1289,8 @@ Missing values:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1444,8 +1455,8 @@ M
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <dl class="cbe-annotations">
 <dt>
 Remark:
@@ -1454,11 +1465,14 @@ Remark:
 This is not a real survey item, of course …
 </dd>
 </dl>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="income">
 <code class="cbe-name">income</code> — <span class="cbe-description">‘Household income’</span>
 </p>
@@ -1468,6 +1482,7 @@ This is not a real survey item, of course …
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1486,8 +1501,8 @@ ratio
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td style="text-align: right; padding-left: 0.3em; padding-right: 0.3em;">
@@ -1574,8 +1589,8 @@ Kurtosis:
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <dl class="cbe-annotations">
 <dt>
 Remark:
@@ -1584,6 +1599,7 @@ Remark:
 This is not a real survey item, of course …
 </dd>
 </dl>
+<p>
 </p>
 </div>
 </div>
@@ -1662,12 +1678,15 @@ vote                   England Scotland Wales
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="vote">
 <code class="cbe-name">vote</code>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1686,8 +1705,8 @@ Factor with
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -1852,17 +1871,21 @@ NA
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="region">
 <code class="cbe-name">region</code>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -1881,8 +1904,8 @@ Factor with
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2016,17 +2039,21 @@ NA
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="income">
 <code class="cbe-name">income</code>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2037,8 +2064,8 @@ double
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td style="text-align: right; padding-left: 0.3em; padding-right: 0.3em;">
@@ -2125,6 +2152,7 @@ Max.:
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
@@ -2145,12 +2173,15 @@ Max.:
 <div class="codebook">
 <div class="codebook-entry">
 <div class="cbe-header" style="border-top: 1px solid; border-bottom: 1px solid; padding-left: 3ex;">
+<p>
+</p>
 <p class="cbe-title" id="bula">
 <code class="cbe-name">bula</code> — <span class="cbe-description">‘Bundesland’</span>
 </p>
 </div>
 <div class="cbe-body" style="padding-left: 3ex;">
 <p>
+</p>
 <table class="cbe-spec">
 <tr>
 <td style="text-align: left;">
@@ -2169,8 +2200,8 @@ nominal
 </td>
 </tr>
 </table>
-</p>
 <p>
+</p>
 <table class="cbe-table" style="border-collapse: collapse;">
 <tr>
 <td colspan="3" style="text-align: center;">
@@ -2680,6 +2711,7 @@ Percent
 </td>
 </tr>
 </table>
+<p>
 </p>
 </div>
 </div>
