@@ -22,6 +22,7 @@
     vignettes.
     \item \code{str} and \code{ls.str} are imported from the 
           \code{utils} package to prevent a NOTE in R CMD check
+    \item Do not wrap HTML tables and list in HTML paragraphs in \code{format_html.CodebookEntry}.
     }
   }
   \subsection{USER-VISIBLE CHANGES}{
